# pkmn-dmg-lib-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  NOTES.md  README.md
data/champions/: README.md  items.json  regulation_m_a_pokemon.json  regulation_m_b_additions.json
data/champions/champout/meta/: source.json
fixtures/js_outputs/: champions_cases.json
src/: damage.rs  lib.rs  stats.rs  types.rs
src/damage/: attack_mods.rs  base_power.rs  bp_mods.rs  final_mods.rs
src/data/: abilities.rs  champions.rs  items.rs  mod.rs  moves.rs  pokemon.rs  type_chart.rs
src/mechanics/: field.rs  mod.rs  modifiers.rs  status.rs  terrain.rs  weather.rs
src/optimizer/: mod.rs  scoring.rs  spreads.rs
tests/: fixtures.rs
tools/: fetch_champout.py  generate_champions_rust.py  normalize_champout.py
