[package]
name = "pkmn-dmg-lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Pokemon Champions damage calculator library ported from the NCP JavaScript calculator"
repository = "https://github.com/D35P4C1T0/pkmn-dmg-lib-rs"
readme = "README.md"
keywords = ["pokemon", "damage", "calculator", "champions"]
categories = ["games", "mathematics"]
include = [
  "/src/**",
  "/tests/**",
  "/fixtures/**",
  "/data/champions/**",
  "/tools/**",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/NOTES.md",
  "/LICENSE",
]

[lib]
name = "damage_calc"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"

[dev-dependencies]
serde_json = "1"
